--- a/index.html
+++ b/index.html
@@ -3,8 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>GitHub Finder</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="wrapper">
+        <nav class="navbar">
+            <h1>GitHub Finder</h1>
+        </nav>
+
+        <div class="search">
+            <h2>Search GitHub Users</h2>
+            <p>Enter a username to fetch a user profile and repos</p>
+            <input type="text" id="searchUser" placeholder="GitHub Username...">
+        </div>
+
+        <div id="profile"></div>
+        <div id="repo"></div>
+    </div>
 
 <script src="github.js"></script>
 <script src="ui.js"></script>
