--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input type="text" id="searchUser" placeholder="GitHub Username...">
         </div>
 
-        <div id="profile"></div>
+        <div id="profile" class="flex-container profile"></div>
         <div id="repo"></div>
     </div>
 
