added the alert message if user not found

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <input type="text" id="searchUser" placeholder="GitHub Username...">
         </div>
 
+        <div id="message" class="message"></div>
         <div id="profile" class="flex-container profile"></div>
         <div id="repo"></div>
     </div>
