added feature - display latest 5 repos

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div id="message" class="message"></div>
         <div id="profile" class="flex-container profile"></div>
-        <div id="repo"></div>
+        <div id="repo" class="repo"></div>
     </div>
 
 <script src="github.js"></script>
