added search button, improved UI

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h2>Search GitHub Users</h2>
             <p>Enter a username to fetch a user profile and repos</p>
             <input type="text" id="searchUser" placeholder="GitHub Username...">
+            <button type="button" id="searchBtn" class="view-link search-btn">Search</button>
         </div>
 
         <div id="message" class="message"></div>
